Added Graph no 2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 
     <script type="text/javascript" src="./js/graphs.js"></script>
+    <script type="text/javascript" src="./js/graph2.js"></script>
 
 
     <title>Global Warming</title>
@@ -109,7 +110,7 @@
 
     </section>
 
-    <div class="container first_page">
+    <div class="container page">
 
         <div class="row">
             <div class="col-sm-12">
@@ -118,6 +119,19 @@
         </div>
         <div class="row">
             <div class="col-sm-12" id="monthly_chart"></div>
+        </div>
+
+    </div>
+
+    <div class="container page">
+
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="rest_h2">Global Emissions per Capita since 1950</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12" id="emissions_chart"></div>
         </div>
 
     </div>
