adjusted the graphs

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                         <a class="nav-link" href="#home_page">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#first_page">First Page</a>
+                        <a class="nav-link" href="#first_page">Temp. Changes over time</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Second Page</a>
+                        <a class="nav-link" href="#second_page">Global emissions per capita</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown link
+                            More
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="#">Action</a>
@@ -108,33 +108,41 @@
     <section id="first_page">
 
 
+
+
+        <div class="container page">
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="rest_h2">Global Warming changes over the time</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p> Here we will be talking about the changes of the temperature over the past 200 years and visualize this for you, so you can see how heavily the enviornment has changed</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-6 col-sm-4" id="monthly_chart"></div>
+            </div>
+
+        </div>
     </section>
 
-    <div class="container page">
+    <Section id="second_page">
+        <div class="container page">
 
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="rest_h2">Global Warming changes over the time</h2>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="rest_h2">Global Emissions per Capita since 1950</h2>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12" id="monthly_chart"></div>
-        </div>
-
-    </div>
-
-    <div class="container page">
-
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="rest_h2">Global Emissions per Capita since 1950</h2>
+            <div class="row">
+                <div class="col-lg-12 col-md-6 col-sm-4" id="emissions_chart"></div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12" id="emissions_chart"></div>
-        </div>
 
-    </div>
+        </div>
+    </Section>
 
 
     <footer>
