--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 
     <script type="text/javascript" src="./js/graphs.js"></script>
     <script type="text/javascript" src="./js/graph2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/otherJS.js"></script>
+
 
 
     <title>Global Warming</title>
 </head>
 
 <body>
+
+    <a id="button"></a>
+
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,7 +49,7 @@
                         <a class="nav-link" href="#second_page">Global emissions per capita</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#third_page" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             More
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -105,10 +111,9 @@
 
     </section>
 
+    <!-- First Page that contains more data */ -->
+
     <section id="first_page">
-
-
-
 
         <div class="container page">
 
@@ -125,9 +130,24 @@
             <div class="row">
                 <div class="col-lg-12 col-md-6 col-sm-4" id="monthly_chart"></div>
             </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
+                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
+                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
+                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
+                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
+                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
+                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
+                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
+                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
+                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                </div>
 
-        </div>
+            </div>
     </section>
+
+    <!-- Second Page that contains more data */ -->
 
     <Section id="second_page">
         <div class="container page">
@@ -140,9 +160,55 @@
             <div class="row">
                 <div class="col-lg-12 col-md-6 col-sm-4" id="emissions_chart"></div>
             </div>
-
-        </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
+                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
+                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
+                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
+                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
+                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
+                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
+                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
+                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
+                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                </div>
+            </div>
     </Section>
+
+
+    <!-- Third Page that contains more data */ -->
+
+    <section id="third_page">
+
+        <div class="container page">
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="rest_h2">Global Warming by country</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-6 col-sm-4" id="total_emission_per_fossilfuel">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
+                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
+                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
+                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
+                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
+                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
+                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
+                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
+                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
+                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                </div>
+
+            </div>
+    </section>
 
 
     <footer>
