edited pie chart and added some CSS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#third_page">Emissions from Fossil Fuel</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#forth_page">Cumulative CO₂ emissions</a>
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </li>
@@ -73,35 +73,56 @@
             <div class="bck-ground">
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="container jumbotron jumbobro-home-page">
+                        <div class="container jumbotron jumbotron-home-page">
                             <h1 class="first_h1">What is global warming?</h1>
-                            <p class="text-first-page"><b>Global warming</b> refers to global averages, with the amount of warming varying by region. Since 1979, global average land temperatures have increased about twice as fast as global average ocean temperatures. This is due
-                                to the larger heat capacity of the oceans and because oceans lose more heat by evaporation.
+                            <p class="text-first-page"><i><b>Global warming</b></i> is the current increase in temperature of the Earth's surface (both land and water) as well as it's atmosphere. Average temperatures around the world have risen by 0.75°C (1.4°F) over the last 100
+                                years about two thirds of this increase has occurred since 1975. In the past, when the Earth experienced increases in temperature it was the result of natural causes but today it is being caused by the accumulation of greenhouse
+                                gases in the atmosphere produced by human activities. The natural greenhouse effect maintains the Earth's temperature at a safe level making it possible for humans and many other lifeforms to exist. However, since the Industrial
+                                Revolution human activities have significantly enhanced the greenhouse effect causing the Earth's average temperature to rise by almost 1°C. <span id="dots">...</span><span id="more">This is creating the global warming
+                                we see today. To put this increase in perspective it is important to understand that during the last ice age, a period of massive climate change, the average temperature change around the globe was only about 5°C. A long
+                                series of scientific research and international studies has shown, with more than 90% certainty, that this increase in overall temperatures is due to the greenhouse gases produced by humans. Activities such as deforestation
+                                and the burning of fossil fuels are the main sources of these emissions. These findings are recognized by the national science academies of all the major industrialized countries. Global warming is affecting many places
+                                around the world. It is accelerating the melting of ice sheets, permafrost and glaciers which is causing average sea levels to rise. It is also changing precipitation and weather patterns in many different places, making
+                                some places dryer, with more intense periods of drought and at the same time making other places wetter, with stronger storms and increased flooding. These changes have affected both nature as well as human society and
+                                will continue to have increasingly worse effects if greenhouse gas emissions continue to grow at the same pace as today. <a class="links_to_other_source" href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB" target="blank">Source</a></span>
                             </p>
+                            <button onclick="myFunction()" id="myBtn" class="btn btn-success btn-sm">Read more</button>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="row ">
+                    <div class="col-md-6 ">
 
-                        <div class="container jumbotron">
+                        <div class="container jumbotron ">
 
-                            <h2 class="first_h2">What are the causes of global warming?</h2>
+                            <h2 class="first_h2 ">What causes global warming?</h2>
 
-                            <p class="text-first-page">On Earth, an atmosphere containing naturally occurring amounts of greenhouse gases causes air temperature near the surface to be warmer by about 33 °C (59 °F) than it would be in their absence. Without the Earth's atmosphere,
-                                the Earth's average temperature would be well below the freezing temperature of water.</p>
+                            <p class="text-first-page">The cause of global warming is the increasing quantity of greenhouse gases in the our atmosphere produced by human activities, like the burning of fossil fuels or deforestation. These activities produce large amounts of greenhouse
+                                gas emissions which is causing global warming. Greenhouse gases trap heat in the Earth's atmosphere to keep the planet warm enough to sustain life, this process is called the greenhouse effect. It is a natural process and
+                                without these gases, the Earth would be too cold for humans, plants and other creatures to live. The natural greenhouse effect exists due to the balance of the major types of greenhouse gases. However, when abnormally high
+                                levels of these gases accumulate in the air, more heat starts getting trapped and leads to the enhancement of the greenhouse effect. Human-caused emissions have been increasing greenhouse levels which is raising worldwide
+                                temperatures and driving global warming. <a class="links_to_other_source" href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
+                                    target="blank">Source</a>
+
                         </div>
 
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-md-6 ">
 
-                        <div class="container jumbotron">
+                        <div class="container jumbotron ">
 
-                            <h2 class="first_h2">How to reduce global warming?</h2>
+                            <h2 class="first_h2 ">What are the effects of global warming?</h2>
 
-                            <p class="text-first-page"> The required changes span technologies, behaviors, and policies that encourage less waste and smarter use of our resources. For example, improvements to energy efficiency and vehicle fuel economy, increases in wind and solar
-                                power, biofuels from organic waste, setting a price on carbon, and protecting forests are all potent ways to reduce the amount of carbon dioxide and other gases trapping heat on the planet.
+                            <p class="text-first-page"> Global warming is damaging the Earth's climate as well as the physical environment. One of the most visible effects of global warming can be seen in the Arctic as glaciers, permafrost and sea ice are melting rapidly. Global
+                                warming is harming the environment in several ways including:
+                                <ul class="text-first-page">
+                                    <li>Desertification</li>
+                                    <li>Increased melting of snow and ice</li>
+                                    <li>Sea level rise</li>
+                                    <li>Stronger hurricanes and cyclones</li><a class="links_to_other_source" href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
+                                        target="blank">Source</a>
+                                </ul>
                             </p>
 
                         </div>
@@ -121,7 +142,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="rest_h2">Global Warming changes over the time</h2>
+                    <h2 class="rest_h2 ">Global Warming changes over the time</h2>
                 </div>
             </div>
             <div class="row">
@@ -132,7 +153,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-6 col-sm-4" id="monthly_chart"></div>
             </div>
-            <div class="row">
+            <div class="row ">
                 <div class="col-sm-12">
                     <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
                         dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
@@ -159,7 +180,7 @@
                     <h2 class="rest_h2">Global Emissions per Capita since 1950</h2>
                 </div>
             </div>
-            <div class="row">
+            <div class="row ">
                 <div class="col-lg-12 col-md-6 col-sm-4" id="emissions_chart"></div>
             </div>
             <div class="row">
@@ -187,7 +208,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="rest_h2">Carbon Emissions from Fossil Fuel</h2>
+                    <h2 class="rest_h2">Carbon Emissions from Fossil Fuel since 1950</h2>
                 </div>
             </div>
             <div class="row">
@@ -221,7 +242,7 @@
                     <h2 class="rest_h2">Cumulative CO₂ emissions</h2>
                 </div>
             </div>
-            <div class="row">
+            <div class="row ">
                 <div class="col-lg-12 col-md-6 col-sm-4" id="cumulative_carbon_emissions">
 
                 </div>
@@ -252,9 +273,9 @@
 
     <!-- JavaScript for Navbar -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 
 </body>
 
