--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                                 and the burning of fossil fuels are the main sources of these emissions. These findings are recognized by the national science academies of all the major industrialized countries. Global warming is affecting many places
                                 around the world. It is accelerating the melting of ice sheets, permafrost and glaciers which is causing average sea levels to rise. It is also changing precipitation and weather patterns in many different places, making
                                 some places dryer, with more intense periods of drought and at the same time making other places wetter, with stronger storms and increased flooding. These changes have affected both nature as well as human society and
-                                will continue to have increasingly worse effects if greenhouse gas emissions continue to grow at the same pace as today. <a class="links_to_other_source" href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB" target="blank">Source</a></span>
+                                will continue to have increasingly worse effects if greenhouse gas emissions continue to grow at the same pace as today. <button class="btn btn-warning btn-sm"><a href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
+                                    target="blank">source</a></button></span>
                             </p>
                             <button onclick="myFunction()" id="myBtn" class="btn btn-success btn-sm">Read more</button>
                         </div>
@@ -101,8 +102,8 @@
                                 gas emissions which is causing global warming. Greenhouse gases trap heat in the Earth's atmosphere to keep the planet warm enough to sustain life, this process is called the greenhouse effect. It is a natural process and
                                 without these gases, the Earth would be too cold for humans, plants and other creatures to live. The natural greenhouse effect exists due to the balance of the major types of greenhouse gases. However, when abnormally high
                                 levels of these gases accumulate in the air, more heat starts getting trapped and leads to the enhancement of the greenhouse effect. Human-caused emissions have been increasing greenhouse levels which is raising worldwide
-                                temperatures and driving global warming. <a class="links_to_other_source" href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
-                                    target="blank">Source</a>
+                                temperatures and driving global warming. <button class="btn btn-warning btn-sm"><a href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
+                                    target="blank">source</a></button>
 
                         </div>
 
@@ -120,8 +121,9 @@
                                     <li>Desertification</li>
                                     <li>Increased melting of snow and ice</li>
                                     <li>Sea level rise</li>
-                                    <li>Stronger hurricanes and cyclones</li><a class="links_to_other_source" href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
-                                        target="blank">Source</a>
+                                    <li>Stronger hurricanes and cyclones</li>
+                                    <button class="btn btn-warning btn-sm"><a href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
+                                        target="blank">source</a></button>
                                 </ul>
                             </p>
 
