edited the graphs and the html file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="./js/graphs.js"></script>
-    <script type="text/javascript" src="./js/graph2_3.js"></script>
+    <script type="text/javascript" src="./js/graphs1.js"></script>
+    <script type="text/javascript" src="./js/graph2.js"></script>
+    <script type="text/javascript" src="./js/graph3.js"></script>
     <script type="text/javascript" src="./js/graph4.js"></script>
     <script type="text/javascript" src="./js/otherJS.js"></script>
 
@@ -28,10 +29,6 @@
 </head>
 
 <body>
-
-    <a id="button"></a>
-
-
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Global Warming</a>
@@ -84,10 +81,9 @@
                                 and the burning of fossil fuels are the main sources of these emissions. These findings are recognized by the national science academies of all the major industrialized countries. Global warming is affecting many places
                                 around the world. It is accelerating the melting of ice sheets, permafrost and glaciers which is causing average sea levels to rise. It is also changing precipitation and weather patterns in many different places, making
                                 some places dryer, with more intense periods of drought and at the same time making other places wetter, with stronger storms and increased flooding. These changes have affected both nature as well as human society and
-                                will continue to have increasingly worse effects if greenhouse gas emissions continue to grow at the same pace as today. <button class="btn btn-warning btn-sm"><a href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
-                                    target="blank">source</a></button></span>
+                                will continue to have increasingly worse effects if greenhouse gas emissions continue to grow at the same pace as today. <br /> <a href="https://bit.ly/32B6EBK" target="blank">https://bit.ly/32B6EBK</a></span>
                             </p>
-                            <button onclick="myFunction()" id="myBtn" class="btn btn-success btn-sm">Read more</button>
+                            <button onclick="myFunction()" id="myBtn" class="btn btn-success btn-sm">expand</button>
                         </div>
                     </div>
                 </div>
@@ -102,9 +98,8 @@
                                 gas emissions which is causing global warming. Greenhouse gases trap heat in the Earth's atmosphere to keep the planet warm enough to sustain life, this process is called the greenhouse effect. It is a natural process and
                                 without these gases, the Earth would be too cold for humans, plants and other creatures to live. The natural greenhouse effect exists due to the balance of the major types of greenhouse gases. However, when abnormally high
                                 levels of these gases accumulate in the air, more heat starts getting trapped and leads to the enhancement of the greenhouse effect. Human-caused emissions have been increasing greenhouse levels which is raising worldwide
-                                temperatures and driving global warming. <button class="btn btn-warning btn-sm"><a href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
-                                    target="blank">source</a></button>
-
+                                temperatures and driving global warming. <a href="https://bit.ly/2VTKOqG" target="blank">https://bit.ly/2VTKOqG</a>
+                            </p>
                         </div>
 
                     </div>
@@ -122,8 +117,7 @@
                                     <li>Increased melting of snow and ice</li>
                                     <li>Sea level rise</li>
                                     <li>Stronger hurricanes and cyclones</li>
-                                    <button class="btn btn-warning btn-sm"><a href="https://whatsyourimpact.org/global-warming?gclid=Cj0KCQjw_5rtBRDxARIsAJfxvYBPzciHxtZek8Ze90iusXlhJhLQc10b7RilsquYugKfMrzKmyuvCoYaArU-EALw_wcB"
-                                        target="blank">source</a></button>
+                                    <a href="https://bit.ly/2N0Y358" target="blank">https://bit.ly/2N0Y358</a>
                                 </ul>
                             </p>
 
@@ -210,7 +204,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="rest_h2">Carbon Emissions from Fossil Fuel since 1950</h2>
+                    <h2 class="rest_h2">Carbon Emissions from Fossil Fuel since 1990</h2>
                 </div>
             </div>
             <div class="row">
