fixed the navbar & added a pic to it

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Global Warming</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-navbar">
+            <a class="navbar-brand" href=""><img src="/fotos/globe.png" width="30" height="30" class="d-inline-block align-top" alt=""> Global Warming</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -138,7 +138,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="rest_h2 ">Global Warming changes over the time</h2>
+                    <h2 class="rest_h2">Global Warming changes over the time</h2>
                 </div>
             </div>
             <div class="row">
@@ -259,6 +259,14 @@
 
             </div>
     </section>
+
+    <div class="container page">
+        <div class="row">
+            <div class="col-sm-12">
+                <a href="#home_page" class="btn btn-outline-dark btn-lg" role="button" aria-pressed="true">back to the top</a>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
