--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/dc.min.css" type="text/css" />
 
@@ -54,7 +54,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#third_page">Emissions from Fossil Fuel</a>
                             <a class="dropdown-item" href="#forth_page">Cumulative CO₂ emissions</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Get in touch</a>
                         </div>
                     </li>
                 </ul>
@@ -235,7 +235,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="rest_h2">Cumulative CO₂ emissions</h2>
+                    <h2 class="rest_h2">Cumulative CO₂ emissions of the 9 worst countries since 1900</h2>
                 </div>
             </div>
             <div class="row ">
@@ -270,8 +270,20 @@
 
 
     <footer>
-
-
+        <div class="container_fluid footer">
+            <div class="row">
+                <div class="col-sm-4">
+                    This website was created by Rami Fareed for learn purposes and as a project for the school "code institute" and it show case the global warming issues.
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://github.com/RamiFareed1989" target="blank">
+                        <i class="fa fa-github fa-3x"></i>
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                </div>
+            </div>
+        </div>
     </footer>
 
 
